--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ html {
 }
 
 .form-bg {
-    background-color: #ede7f6;
+    background-image: url("Resources/form.jpeg");
     padding-top: 1000%;
     padding-bottom: 1%;
     padding-left: 1%;
