--- a/style.css
+++ b/style.css
@@ -33,28 +33,29 @@ html {
 
 .form-bg {
   background-image: url("Resources/form.jpeg");
-  padding-top: 1000%;
   padding-bottom: 1%;
-  padding-left: 1%;
-  padding-right: 1%;
+  width: fit-content;
+  float: auto;
+  border-radius: 20px;
 }
 
-#confession {
-  width: 300px;
-  height: 200px;
-  overflow-y: auto;
-  overflow-x: auto;
-  resize: both;
-  position: relative;
-  z-index: 2;
-}
-
-#animated-intro:hover{
+#animated-intro:hover {
   cursor: pointer;
 }
 
 @media only screen and (max-width: 767px) {
+  .form-bg {
+    width: 100%;
+  }
+
   iframe {
     width: 100%;
   }
 }
+
+/* @media only screen and (min-width: 767px) { */
+  #confession {
+    display: flex;
+    justify-content: center;
+  }
+/* } */
